--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "npx nodemon server.js"
+    "start": "node server.js"
   },
   "author": "Aditya Raj",
   "license": "ISC",
